<resources>
    <string name="app_name">438Project01</string>
    <string name="login">Login Here</string>
    <string name="create_account">Create Account Here</string>
    <string name="usernameHint">Enter your username here</string>
    <string name="passwordHint">Enter your password here</string>

    <string name="createAccButton">Create an Account</string>
    <string name="searchButton">Search</string>
    <string name="loginButton">Login</string>
    <string name="profileButton">Profile Page</string>
    <string name="profileBio">Add something to your bio!</string>
    <string name="editProfile">Edit Profile</string>
    <string name="bioHint">Start typing here</string>
    <string name="saveButton">Save</string>
    <string name="settingsButton">Settings</string>
    <string name="guestButton">Login as Guest</string>
    <string name="backButton">Back</string>
    <string name="changePassButton">Change Password</string>
    <string name="logoutButton">Log Out</string>
    <string name="deleteAccButton">Delete Account</string>
    <string name="easterEggButton">Easter Egg! (Click Me)</string>
    <string name="notifSlider">Notifications On/Off</string>

    <string name="searchBarText">Enter a thing here</string>
    <string name="searchButtonText">Search!</string>
    <string name="leftButtonText">Left</string>
    <string name="rightButtonText">Right</string>
    <string name="randomButtonText">Random</string>
    <string name="imageIndexText">0 / 0</string>
</resources>